2007-05-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-toolbar]): method replacing the one with the same name in the
	task and appointment editor classes. This method makes also use of
	the new method "isOrganizerOrOwner:" and "participant:" in
	SOGoCalendarComponent.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-toolbar]): removed method, replaced with a method with the same
	name in UIxComponentEditor.

	* UI/Scheduler/UIxTaskEditor.m ([UIxTaskEditor -toolbar]): removed
	method, replaced with a method with the same name in
	UIxComponentEditor.

	* SoObjects/SOGo/AgenorUserDefaults.m ([AgenorUserDefaults
	-primaryFetchProfile]): the values returned from the database are
	converted to a put dictionary first, since the dictionary returned
	is actually an immutable one, which can cause a crash afterwards.

2007-04-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoPermissions.m: added "SOGoRole_ObjectViewer"
	and "SOGoRole_ObjectEditor".

	* UI/Common/UIxUserRightsEditor.m ([UIxUserRightsEditor
	-prepareRightsForm]): this method is no longer mandatory.

	* UI/Contacts/UIxContactsUserRightsEditor.m
	([UIxContactsUserRightsEditor
	-setUserCanCreateObjects:userCanCreateObjects]): new subclass
	module to handle acls related to the address books. Partial
	implementation.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
	-setRoles:rolesforUser:uidforObjectAtPath:objectPathArray]): cache
	newly set roles.
	([SOGoFolder
	-removeAclsForUsers:usersforObjectAtPath:objectPathArray]): remove
	specified roles from cache.
	([SOGoFolder -aclsForUser:uidforObjectAtPath:objectPathArray]):
	put resulting roles in cache.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -init]): do not invoke
	initWithName:inContainer:. Instead, directly initialize the ivars
	as it is supposed to be to avoid an infinite loop whenever one of
	those two methods are overriden.
